TODO 合并发送和接收的bytes